# raucky

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  raucky  raucky.py  requirements-dev.txt  requirements.txt  scripts.py
example/: config-raucky.toml
example/input/: hook.sh  manifest.raucm  rootfs.img
example/output/: bundle.raucb  bundle.rauci
keys/: RootCA.csr  RootCA.key  RootCA.pem  client.cer  client.csr  client.key
raucky_lib/: __init__.py  cli.py  cms.py  logger.py  manifest.py  squashfs.py
testdir/: manifest.raucm
testfiles/: bundle.cms  bundle.cms.size  bundle.raucb  bundle.rauci
tests/: cms_fixture.py  common_fixtures.py  manifest_fixture.py  test_cms.py  test_manifest.py  test_squashfs.py
