[tool.poetry]
name = "raucky"
version = "0.1.0"
description = "RAUC plain bundle creation tool for external signing."
authors = ["Jean-Pierre Geslin <jarsop@outlook.com>"]
license = "LGPL v2.1"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "=1.4.4"
asn1crypto = "=1.4.0"
astroid = "=2.5.0"
attrs = "=20.3.0"
click = "=7.1.2"
iniconfig = "=1.1.1"
isort = "=5.7.0"
lazy-object-proxy = "=1.5.2"
mccabe = "=0.6.1"
munch = "=2.5.0"
packaging = "=20.8"
pathspec = "=0.8.1"
pluggy = "=0.13.1"
regex = "=2020.11.13"
result = "=0.5.0"
rtoml = "=0.7.0"
six = "=1.15.0"
tqdm = "=4.56.0"
wrapt = "=1.12.1"

[tool.poetry.dev-dependencies]
black = "=20.8b1"
mypy = "=0.790"
mypy-extensions = "=0.4.3"
py = "=1.10.0"
pylint = "=2.6.0"
pyparsing = "=2.4.7"
pytest = "=6.2.1"
typed-ast = "=1.4.2"
typing-extensions = "=3.7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
all = "scripts:all"
fmt = "scripts:fmt"
lint = "scripts:lint"
test = "scripts:test"